# private-futarchy

./: .gitignore  Anchor.toml  Cargo.toml  README.md  ecosystem.config.js  package.json
.github/workflows/: build-deploy.yml
agent/: .env.example  package.json
agent/src/: act.ts  brain.ts  config.ts  index.ts  logger.ts  observe.ts  reflect.ts  telegram.ts  types.ts  watchdog.ts
app/: index.html  package.json  vite.config.ts
app/src/: App.tsx
app/src/components/: AgentFeed.tsx  ClaimModal.tsx  Header.tsx  MarketCard.tsx  PositionModal.tsx
app/src/hooks/: useFutarchy.ts
app/src/styles/: global.css
circuits/position_claim/: circuit.circom
programs/private-futarchy/: Cargo.toml
programs/private-futarchy/src/: errors.rs  lib.rs  state.rs
programs/private-futarchy/src/instructions/: claim_winnings.rs  close_position.rs  create_market.rs  mod.rs  resolve_market.rs  submit_position.rs
scripts/: build-circuit.sh  deploy-program.sh  deploy.sh  setup.sh
sdk/: package.json
sdk/src/: client.ts  commitment.ts  index.ts  proof.ts
tests/: private-futarchy.ts
