[workspace]
members = [
    "programs/private-futarchy",
]
resolver = "2"

[patch.crates-io]
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev = "4e6cacff2f4ff53744fda0509f5e62545fd99aa6" }

[profile.release]
overflow-checks = true
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1
