[package]
name = "private-futarchy"
version = "0.1.0"
description = "Private prediction market module using ZK Compression (Light Protocol)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_futarchy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
light-sdk = { version = "0.9.0", features = ["anchor"] }
light-system-program = { version = "0.9.0" }
account-compression = { version = "0.9.0" }
pyth-solana-receiver-sdk = "0.4.0"

[dev-dependencies]
anchor-client = "0.30.1"
solana-program-test = "1.18"
tokio = { version = "1", features = ["full"] }
