[package]
name = "private-futarchy"
version = "0.1.0"
description = "Private prediction market module using ZK Compression (Light Protocol)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_futarchy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token"] }
light-sdk = { git = "https://github.com/Lightprotocol/light-protocol", rev = "main", package = "light-sdk" }
light-system-program = { git = "https://github.com/Lightprotocol/light-protocol", rev = "main", package = "light-system-program-anchor" }
account-compression = { git = "https://github.com/Lightprotocol/light-protocol", rev = "main", package = "account-compression", features = ["cpi"] }
pyth-solana-receiver-sdk = "0.4.0"

[dev-dependencies]
anchor-client = "0.31.1"
solana-program-test = "2.1"
tokio = { version = "1", features = ["full"] }
